# dodo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dodo/: __init__.py  agent.py  content.py  exceptions.py  result.py  run.py  task_runner.py  tool.py  tool_registry.py
src/dodo/llm/: __init__.py  content.py  llm.py  message.py
src/dodo/llm/providers/: __init__.py  gemini.py  gemini_mapper.py
src/dodo/prompts/: __init__.py  default.py
src/dodo/runner/: __init__.py  memory.py  redo_runner.py  run.py  runner.py
src/dodo/tools/: __init__.py  base.py  control.py  decorator.py  registry.py
tests/: __init__.py  conftest.py  test_agent.py
tests/integration/: __init__.py  test_gemini.py  test_runner.py
tests/unit/: __init__.py  test_decorator.py  test_redo_runner.py  test_runner.py
